# klaver

./: Cargo.toml  Cross.toml  Justfile  README.md  another.ts  class.tsx  deno.ts  event.ts  http.ts  import.ts  klaver.ts  module.d.ts  node.js  store.js  test.js  test.mjs  test.ts  test2.ts  tsconfig.json
klaver/: Cargo.toml
klaver-base/: Cargo.toml  klaver.base.d.ts  module.d.ts
klaver-base/examples/: base.rs  test.js
klaver-base/src/: abort_controller.rs  abort_signal.rs  base.rs  blob.rs  config.rs  console.rs  dom_exception.rs  event_target.rs  export.rs  file.rs  lib.rs  macros.rs  module.rs
klaver-base/src/buffer/: array_buffer.rs  mod.rs
klaver-base/src/encoding/: b64.rs  encoding.rs  mod.rs
klaver-base/src/events/: dyn_event.rs  emitter.rs  event.rs  event_target.rs  listener.rs  mod.rs
klaver-base/src/message/: channel.rs  event.rs  mod.rs  port.rs
klaver-base/src/streams/: data.rs  mod.rs  queue.rs  queue_strategy.rs
klaver-base/src/structured_clone/: bindings.rs  context.rs  mod.rs  module.rs  registry.rs  traits.rs  (+1 more)
klaver-cli/: Cargo.toml
klaver-cli/src/: cli.rs  main.rs  repl.rs  run.rs
klaver-compat/: Cargo.toml  klaver.d.ts  package.json  rollup.config.js
klaver-compat/src/: compat.js  lib.rs
klaver-compat/srcjs/: base.ts  console.ts  index.ts  streams.ts  util.ts
klaver-core/: Cargo.toml
klaver-core/src/: core.rs  export.rs  extensions.rs  inherit.rs  lib.rs
klaver-crypto/: Cargo.toml
klaver-crypto/src/: buffer.rs  digest.rs  lib.rs  module.rs  random.rs
klaver-dom/: Cargo.toml  module.d.ts
klaver-dom/src/: class_list.rs  document.rs  element.rs  lib.rs  lock.rs  node_list.rs
klaver-fetch/: Cargo.toml
klaver-fetch/src/: body.rs  body_init.rs  body_static.rs  client.rs  fetch.rs  headers.rs  lib.rs  method.rs  module.rs  request.rs  response.rs  response_init.rs  url.rs  url_search_params.rs
klaver-fs/: Cargo.toml  global.d.ts  module.d.ts
klaver-fs/src/: file.rs  file_system.rs  file_system_directory_entry.rs  file_system_entry.rs  file_system_file_entry.rs  lib.rs  module.rs
klaver-gerning/: Cargo.toml
klaver-gerning/src/: service.rs
klaver-http/: Cargo.toml  http.d.ts  module.d.ts
klaver-http/examples/: http.rs  test.js
klaver-http/src/: body.rs  client.rs  headers.rs  lib.rs  module.rs  request.rs  response.rs  router.rs  serve.rs  url.rs
klaver-image/: Cargo.toml
klaver-image/src/: image.rs  lib.rs  module.rs
klaver-intl/: Cargo.toml
klaver-intl/src/: lib.rs  locale.rs  module.rs  numberformat.rs
klaver-modules/: Cargo.toml
klaver-modules/examples/: compiler.rs  component.tsx  modules.rs  other.ts
klaver-modules/src/: builder.rs  builtin_loader.rs  builtin_resolver.rs  environ.rs  file_resolver.rs  global.rs  global_info.rs  globals.rs  lib.rs  loader.rs  module_info.rs  modules.rs  modules_builder.rs  package.json  source_map.rs  types.rs
klaver-modules2/: Cargo.toml
klaver-modules2/src/: builder.rs  environ.rs  environ_builder.rs  lib.rs  loader.rs  module.rs  types.rs
klaver-os/: Cargo.toml  module.d.ts
klaver-os/src/: config.rs  env.rs  lib.rs  module.rs  platform.rs  shell.rs
klaver-runtime/: Cargo.toml
klaver-runtime/examples/: promise.js  resource.js  runtime.rs  store.js  test.js
klaver-runtime/src/: async_hook.rs  async_locale_storage.rs  async_resource.rs  context.rs  event_loop.rs  executor.rs  id.rs  lib.rs  listener.rs  module.rs  promise_hook.rs  resource.rs  runtime.rs  state.rs  task.rs  task_manager.rs
klaver-streams/: Cargo.toml
klaver-streams/examples/: stream.js  streams.rs
klaver-streams/src/: async_byte_iter.rs  lib.rs  module.rs  stream.rs
klaver-structuredclone/: Cargo.toml
klaver-structuredclone/examples/: clone.rs  example.js
klaver-structuredclone/src/: bindings.rs  lib.rs  module.rs  registry.rs  tag.rs  traits.rs  value.rs
klaver-task/: Cargo.toml
klaver-task/examples/: task.rs  task2.rs  test.js
klaver-task/src/: async_hook.rs  async_id.rs  async_local_storage.rs  async_state.rs  chan.rs  event_loop.rs  exec_state.rs  hook.rs  lib.rs  listener.rs  module.rs  promise_hook.rs  resource.rs  run.rs  shutdown.rs  snapshot.rs  state.rs  task.rs
klaver-test/: Cargo.toml
klaver-test/examples/: test.js  test.rs
klaver-test/src/: assert.rs  describe.rs  lib.rs  module.rs  reporter.rs  runner.rs  suite.rs
klaver-timers/: Cargo.toml
klaver-timers/examples/: test.js  timers.rs
klaver-timers/src/: backend.rs  id.rs  lib.rs  module.rs  timers.rs
klaver-util/: Cargo.toml
klaver-util/src/: array.rs  context.rs  core.rs  equal.rs  func.rs  helpers.rs  inherit.rs  lib.rs  object.rs  primordials.rs
klaver-value/: Cargo.toml
klaver-value/src/: date.rs  inherit.rs  lib.rs  map.rs  primordials.rs  set.rs  string_ref.rs  tuples.rs  typed_array.rs  typed_map.rs  typed_multi_map.rs  util.rs  weak_map.rs
klaver-vm/: Cargo.toml  klaver.vm.d.ts
klaver-vm/src/: bindings.rs  builder.rs  context.rs  lib.rs  macros.rs  module.rs  pool.rs  util.rs  vm.rs  worker.rs  worker2.rs
klaver-webworker/: Cargo.toml
klaver-webworker/src/: event.rs  init.js  lib.rs  work.rs  worker.rs
klaver-wintercg/: Cargo.toml  TODO.md  build.rs
klaver-wintercg/examples/: stream.js  streams.rs
klaver-wintercg/src/: abort_controller.rs  backend.rs  base.rs  blob.rs  config.rs  console.rs  event_target.rs  file.rs  global.rs  lib.rs  macros.rs  module.rs  multimap.rs  performance.rs  process.rs  timers.rs
klaver-wintercg/types/: base.d.ts  crypto.d.ts  http.d.ts  outro.d.ts
klaver-wintertc/: Cargo.toml
klaver-wintertc/src/: abort_controller.rs  backend.rs  base.rs  blob.rs  lib.rs  module.rs  settings.rs
klaver-wintertc/types/: base.d.ts  crypto.d.ts  encoding.d.ts  fetch.d.ts  fs.d.ts  worker.d.ts
klaver-worker/: Cargo.toml
klaver-worker/examples/: worker.rs
klaver-worker/src/: lib.rs  module.rs  pool.rs  resource.rs  shutdown.rs  work.rs  worker.rs  workers.rs
klaver/examples/: klaver.js  klaver.rs  pool.rs  test.js  worker.js
klaver/src/: error.rs  lib.rs  macros.rs  options.rs  pool.rs  realm.rs  timers.rs  types.rs  vm.rs  worker.rs
(+624 files in other folders)
