[workspace]

resolver = "2"

members = [

  # "klaver-image",
  "rquickjs-util",
  # "klaver-fs",
  # "klaver-dom",
  # "klaver-wintercg",
  "klaver-modules",
  # "klaver-cli",
  # "klaver",
  # "klaver-handlebars",
  "klaver-base",
  "klaver-timers",
  "klaver-runner",
  "klaver-worker",
  "klaver-fetch",
  "klaver-vm",
  "klaver-wintercg",
  "klaver",
  "klaver-os",
  "klaver-util",
  "klaver-crypto",
  "klaver-intl",
  "klaver-cli",
  "klaver-test",
  "klaver-task",
  # "klaver-http",
]


[workspace.dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9", features = [
  "futures",
  "macro",
  "classes",
  "array-buffer",
] }
futures = { version = "0.3" }
event-listener = { version = "5" }
pin-project-lite = { version = "0.2" }
flume = { version = "0.11" }

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = "debuginfo"
