[workspace]

resolver = "2"

exclude = ["OLD"]

members = [
  "klaver-modules",
  "klaver-base",
  "klaver-vm",
  "klaver",
  #"klaver-os",
  "klaver-cli",
  # "klaver-test",
  "klaver-runtime",
  "klaver-image",
  # "klaver-dom",
  "klaver-fs",
  "klaver-hbs",
  "klaver-core",
  "klaver-worker"
, "klaver-wintertc"
]

[workspace.dependencies]
rquickjs = { version = "0.12", features = [
  "futures",
  "macro",
] }
futures = { version = "0.3" }
event-listener = { version = "5" }
pin-project-lite = { version = "0.2" }
flume = { version = "0.11" }
tracing = { version = "0.1" }

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
debug = "full"              # No one needs an undebuggable release binary
opt-level = "s"             # reduces binary size by ~25%
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true    
