[package]
name = "klaver-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "klaver"
path = "src/main.rs"


[features]
default = ["swc"]
swc = ["klaver-modules/swc-transform"]
debug = ["tracing-subscriber"]

[dependencies]
rquickjs.workspace = true
klaver-wintertc = { path = "../klaver-wintertc", features = [
  "fetch",
  "intl",
  "crypto",
  "module",
  "tokio",
] }
klaver-util = { path = "../klaver-util" }
klaver-vm = { path = "../klaver-vm" }
klaver-modules = { path = "../klaver-modules" }
klaver-task = { path = "../klaver-task", features = ["module"] }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["net", "rt", "macros"] }
color-eyre = { version = "0.6" }

reedline = { version = "0.41" }

tracing-subscriber = { version = "0.3", optional = true }
tracing.workspace = true
