[package]
name = "klaver-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
klaver = { path = "../klaver" }
klaver-encoding = { path = "../klaver-encoding" }
klaver-http = { path = "../klaver-http", features = ["reqwest"] }
klaver-crypto = { path = "../klaver-crypto" }
klaver-shared = { path = "../klaver-shared" }
