[package]
name = "klaver-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
klaver = { path = "../klaver" }
rquickjs.workspace = true
rquickjs-core = { version = "0.6" }

rand = { version = "0.8" }
uuid = { version = "1", features = ["v4"] }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
