[package]
name = "klaver-crypto"
version = "0.1.0"
edition = "2024"

[features]
module = ["klaver-modules"]

[dependencies]
klaver-core = { path = "../klaver-core" }
klaver-modules = { path = "../klaver-modules", optional = true }
rquickjs.workspace = true


rand = { version = "0.9" }
uuid = { version = "1", features = ["v4"] }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
