[package]
name = "klaver-dom"
version = "0.1.0"
edition = "2021"

[dependencies]
domjohnson = { git = "https://github.com/kildevaeld/domjohnson" }
rquickjs = { version = "*", features = ["classes", "macro"] }
locket = { git = "https://github.com/kildevaeld/locket-rs" }
klaver-shared = { path = "../klaver-shared" }
klaver = { path = "../klaver" }
