[package]
name = "klaver-dom"
version = "0.1.0"
edition = "2021"

[features]
parallel = ["rquickjs/parallel"]

[dependencies]
rquickjs.workspace = true
rquickjs-util = { path = "../rquickjs-util" }
rquickjs-modules = { path = "../rquickjs-modules" }

domjohnson = { git = "https://github.com/kildevaeld/domjohnson" }
locket = { git = "https://github.com/kildevaeld/locket-rs" }
