[package]
name = "klaver-fetch"
version = "0.1.0"
edition = "2024"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
klaver-base = { path = "../klaver-base" }
klaver-runner = { path = "../klaver-runner" }
rquickjs.workspace = true
rquickjs-util = { path = "../rquickjs-util" }

bytes = { version = "1" }
http = { version = "1" }
serde_json = { version = "1" }
url = { version = "2" }
form_urlencoded = { version = "1" }
urlencoding = { version = "2" }
multer = { version = "3" }
reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }

futures.workspace = true

pin-project-lite = { version = "0.2" }
flume.workspace = true


reqwest = { version = "0.12", optional = true }
