[package]
name = "klaver-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
klaver = { path = "../klaver" }
klaver-shared = { path = "../klaver-shared" }
tokio = { version = "1", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
rquickjs.workspace = true
futures.workspace = true
