[package]
name = "klaver-gerning"
version = "0.1.0"
edition = "2021"

[dependencies]
klaver = { path = "../klaver" }
klaver-shared = { path = "../klaver-shared", features = ["vaerdi"] }
rquickjs.workspace = true
futures.workspace = true
gerning = { git = "https://github.com/kildevaeld/gerning-rs", features = [
  "service",
] }
vaerdi = { git = "https://github.com/kildevaeld/vaerdi-rs", features = [
  "gerning",
] }
