[package]
name = "klaver-modules2"
version = "0.1.0"
edition = "2024"

[features]
default = ["file-resolver"]
file-resolver = ["dep:oxc_resolver"]
swc = [
  "swc_node_comments",
  "swc_ecma_codegen",
  "swc_ecma_transforms",
  "swc_common",
  "swc_ecma_parser",
  "swc_ecma_ast",
  "swc_ecma_visit",
  "swc_sourcemap",
  "anyhow",
  "par-core",
]

[dependencies]
klaver-core = { path = "../klaver-core" }
rquickjs = { workspace = true, features = ["loader"] }
relative-path = { version = "2.0" }
tracing = { version = "0.1", features = ["std"] }

oxc_resolver = { version = "11.21", optional = true }

## Swc
swc_ecma_codegen = { version = "17.0", optional = true }
swc_ecma_transforms = { version = "33.0", features = [
  "proposal",
  "compat",
  "module",
  "typescript",
  "react",
  "concurrent",
], optional = true }
swc_common = { version = "14.0", features = ["sourcemap"], optional = true }
swc_ecma_parser = { version = "24.0", optional = true }
swc_ecma_ast = { version = "15.0", optional = true }
swc_ecma_visit = { version = "15.0", optional = true }
swc_node_comments = { version = "14.0", optional = true }
swc_sourcemap = { version = "9.3", optional = true }
anyhow = { version = "1", optional = true }
par-core = { version = "2", optional = true, features = ["chili"] }
