[package]
name = "klaver-runtime"
version = "0.1.0"
edition = "2024"

[features]
module = ["klaver-modules"]

[dependencies]
klaver-util = { path = "../klaver-util" }
klaver-modules = { path = "../klaver-modules", optional = true }
futures.workspace = true
slotmap = { version = "1" }
tracing = { workspace = true }

pin-project-lite = { workspace = true }


[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt"] }
tracing-subscriber = { version = "*" }
