[package]
name = "klaver-streams"
version = "0.1.0"
edition = "2021"

[dependencies]
klaver = { path = "../klaver" }
futures = { version = "0.3" }
rquickjs.workspace = true
tokio = { version = "1", features = ["sync"] }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
