[package]
name = "klaver-structuredclone"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "typetag", "ordered-float/serde"]

[dependencies]
rquickjs.workspace = true
rquickjs-util = { path = "../rquickjs-util" }
dyn-clone = { version = "1" }
ordered-float = { version = "5", features = [] }
indexmap = { version = "2" }

typetag = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
