[package]
name = "klaver-task"
version = "0.1.0"
edition = "2024"

[dependencies]
klaver-util = { path = "../klaver-util" }
event-listener = { workspace = true }
futures.workspace = true
slotmap = { version = "1" }
tracing = { workspace = true }

pin-project-lite = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt"] }
tracing-subscriber = { version = "*" }
