[package]
name = "klaver-timers"
version = "0.1.0"
edition = "2024"

[dependencies]
klaver-runner = { path = "../klaver-runner" }
klaver-util = { path = "../klaver-util" }
rquickjs.workspace = true
futures = { version = "0.3" }

event-listener = { version = "5" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
