[package]
name = "klaver-timers"
version = "0.1.0"
edition = "2024"

[features]
default = ["module"]
module = ["klaver-modules"]

[dependencies]
klaver-task = { path = "../klaver-task" }
klaver-util = { path = "../klaver-util" }
klaver-modules = { path = "../klaver-modules", optional = true }
rquickjs.workspace = true
futures = { version = "0.3" }

event-listener = { version = "5" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
