[package]
name = "klaver-vm"
version = "0.1.0"
edition = "2024"

[features]
default = ["worker"]
worker = ["flume"]
parallel = ["rquickjs/parallel"]
pool = ["deadpool", "worker"]

[dependencies]
klaver-modules = { path = "../klaver-modules" }
klaver-runner = { path = "../klaver-runner" }
rquickjs = { workspace = true }
rquickjs-util = { path = "../rquickjs-util" }
futures.workspace = true

## Worker
flume = { workspace = true, features = ["async"], optional = true }

## Pool
deadpool = { version = "0.12", optional = true }
