[package]
name = "klaver-vm"
version = "0.2.0"
edition = "2024"

[features]
default = []
worker = ["flume"]
parallel = ["rquickjs/parallel"]
pool = ["deadpool", "worker", "parallel"]
tokio = ["dep:tokio"]
compio = ["dep:compio"]


[dependencies]
klaver-modules = { path = "../klaver-modules" }
klaver-runtime = { path = "../klaver-runtime" }
klaver-core = { path = "../klaver-core" }
rquickjs = { workspace = true }
futures.workspace = true

## Worker
flume = { workspace = true, features = ["async"], optional = true }

## Pool
deadpool = { version = "0.12", optional = true }

tokio = { version = "1", features = ["rt"], optional = true }
compio = { version = "0.19", features = ["runtime"], optional = true }
