[package]
name = "klaver-wintercg"
version = "0.1.0"
edition = "2024"

[features]
default = ["module", "tokio"]
module = ["klaver-modules"]

tokio = ["dep:tokio", "klaver-fetch/reqwest"]

[dependencies]
klaver-base = { path = "../klaver-base" }
klaver-timers = { path = "../klaver-timers" }
klaver-util = { path = "../klaver-util" }
# klaver-worker = { path = "../klaver-worker" }
klaver-fetch = { path = "../klaver-fetch" }
klaver-modules = { path = "../klaver-modules", optional = true }

rquickjs.workspace = true

tokio = { version = "1", features = ["time"], optional = true }


futures.workspace = true
