[package]
name = "klaver-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
klaver-task = { path = "../klaver-task" }
klaver-base = { path = "../klaver-base" }
klaver-util = { path = "../klaver-util" }
rquickjs.workspace = true
rquickjs-util = { path = "../rquickjs-util" }


futures = { version = "0.3" }
flume = { version = "0.11", features = ["async"] }
