[package]
name = "klaver-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
klaver-runtime = { path = "../klaver-runtime" }
klaver-base = { path = "../klaver-base" }
klaver-core = { path = "../klaver-core" }
klaver-vm = { path = "../klaver-vm", features = ["worker"] }
klaver-modules = { path = "../klaver-modules" }
rquickjs.workspace = true


futures = { version = "0.3" }
flume = { version = "0.11", features = ["async"] }
